--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "express": "^4.17.2",
     "mongoose": "^6.2.1",
     "morgan": "^1.10.0",
+    "node": "^18.9.0",
     "nodemon": "^2.0.15",
     "uuid": "^8.3.2"
   }
