--- a/backend/package.json
+++ b/backend/package.json
@@ -16,5 +16,8 @@
     "node": "^18.10.0",
     "nodemon": "^2.0.15",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "@types/luxon": "^3.1.0"
   }
 }
