--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.2",
+    "@types/luxon": "^3.1.0",
     "@vue/compiler-sfc": "^3.0.0",
     "autoprefixer": "^10.4.8",
     "eslint": "^8.23.0",
